--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@whiskeysockets/baileys": "^6.5.0",
     "dotenv": "^16.3.1",
+    "moment": "^2.30.1",
     "mongodb": "^6.17.0",
     "mongoose": "^8.0.3",
     "pino": "^8.17.2",
