--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "mongoose": "^8.0.3",
     "pino": "^8.17.2",
     "qrcode-terminal": "^0.12.0"
+  },
+  "devDependencies": {
+    "pino-pretty": "^11.0.0"
   }
 }
