--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "mongodb": "^6.17.0",
     "mongoose": "^8.0.3",
     "pino": "^8.17.2",
-    "qrcode-terminal": "^0.12.0"
+    "qrcode-terminal": "^0.12.0",
+    "sharp": "^0.32.6"
   },
   "devDependencies": {
     "pino-pretty": "^11.0.0"
