--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "moment": "^2.30.1",
     "mongodb": "^6.17.0",
     "mongoose": "^8.0.3",
+    "node-cron": "^4.2.0",
     "pino": "^8.17.2",
     "qrcode-terminal": "^0.12.0",
     "sharp": "^0.32.6"
