--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   },
   "dependencies": {
     "@whiskeysockets/baileys": "^6.7.18",
+    "cloudinary": "^2.7.0",
     "dotenv": "^16.6.1",
     "moment": "^2.30.1",
     "mongodb": "^6.17.0",
-    "mongoose": "^8.0.3",
+    "mongoose": "^8.16.3",
     "node-cron": "^4.2.0",
     "pino": "^8.17.2",
     "qrcode-terminal": "^0.12.0",
