--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cloudinary": "^2.7.0",
     "dotenv": "^16.6.1",
     "moment": "^2.30.1",
+    "moment-duration-format": "^2.3.2",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.3",
     "node-cron": "^4.2.0",
